openshift/templates/how-to-create-template/raw/dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      template.alpha.openshift.io/wait-for-ready: "true"
    creationTimestamp: "2020-05-05T04:35:06Z"
    generation: 2
    labels:
      template: mysql-ephemeral-template
      template.openshift.io/template-instance-owner: 79a9cd7e-8ed7-49a7-ac8a-78c5ad06b900
    name: mysql
    namespace: s2i-app-with-build
    resourceVersion: "2291303"
    selfLink: /apis/apps.openshift.io/v1/namespaces/s2i-app-with-build/deploymentconfigs/mysql
    uid: 2a32bf04-8fcb-470e-8d26-17c98aa5e960
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: mysql
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        creationTimestamp: null
        labels:
          name: mysql
      spec:
        containers:
        - env:
          - name: MYSQL_USER
            valueFrom:
              secretKeyRef:
                key: database-user
                name: mysql
          - name: MYSQL_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: mysql
          - name: MYSQL_ROOT_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-root-password
                name: mysql
          - name: MYSQL_DATABASE
            valueFrom:
              secretKeyRef:
                key: database-name
                name: mysql
          image: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          name: mysql
          ports:
          - containerPort: 3306
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - MYSQL_PWD="$MYSQL_PASSWORD" mysql -h 127.0.0.1 -u $MYSQL_USER -D $MYSQL_DATABASE
                -e 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: mysql-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: mysql-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mysql
        from:
          kind: ImageStreamTag
          name: mysql:5.7
          namespace: openshift
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/openshift/mysql@sha256:9a781abe7581cc141e14a7e404ec34125b3e89c008b14f4e7b41e094fd3049fe
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-05T04:35:31Z"
      lastUpdateTime: "2020-05-05T04:35:31Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-05T04:35:31Z"
      lastUpdateTime: "2020-05-05T04:35:31Z"
      message: replication controller "mysql-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/IndraniDey1/spring-boot-s2i-app.git
    creationTimestamp: "2020-05-05T05:38:27Z"
    generation: 4
    labels:
      app: spring-boot-s2i-app-git
      app.kubernetes.io/component: spring-boot-s2i-app-git
      app.kubernetes.io/instance: spring-boot-s2i-app-git
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-boot-s-2-i-app-git-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "8"
    name: spring-boot-s2i-app-git
    namespace: s2i-app-with-build
    resourceVersion: "2309299"
    selfLink: /apis/apps.openshift.io/v1/namespaces/s2i-app-with-build/deploymentconfigs/spring-boot-s2i-app-git
    uid: da5385e6-df3b-41e6-ae26-fcc5eecd0623
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: spring-boot-s2i-app-git
      deploymentconfig: spring-boot-s2i-app-git
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: spring-boot-s2i-app-git
          deploymentconfig: spring-boot-s2i-app-git
      spec:
        containers:
        - env:
          - name: LOGGING_LEVEL_ORG_HIBERNATE_SQL
            valueFrom:
              configMapKeyRef:
                key: logging.level.org.hibernate.SQL
                name: s2i-cm
          - name: SPRING_DATASOURCE_DRIVER_CLASS_NAME
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.driver.class.name
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MAX_ACTIVE
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.max-active
                name: s2i-cm
          - name: SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT
            valueFrom:
              configMapKeyRef:
                key: spring.jpa.properties.hibernate.dialect
                name: s2i-cm
          - name: SPRING_JPA_PROPERTIES_HIBERNATE_ID_NEW_GENERATOR_MAPPINGS
            valueFrom:
              configMapKeyRef:
                key: spring.jpa.properties.hibernate.id.new_generator_mappings
                name: s2i-cm
          - name: CAT_FACT_URL
            valueFrom:
              configMapKeyRef:
                key: cat-fact.url
                name: s2i-cm
          - name: LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL_BASICBINDER
            valueFrom:
              configMapKeyRef:
                key: logging.level.org.hibernate.type.descriptor.sql.BasicBinder
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MAX_IDLE
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.max-idle
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MAX_WAIT
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.max-wait
                name: s2i-cm
          - name: SPRING_DATASOURCE_TOMCAT_MIN_IDLE
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.tomcat.min-idle
                name: s2i-cm
          - name: SPRING_DATASOURCE_URL
            valueFrom:
              configMapKeyRef:
                key: spring.datasource.url
                name: s2i-cm
          - name: SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL
            valueFrom:
              configMapKeyRef:
                key: spring.jpa.properties.hibernate.format_sql
                name: s2i-cm
          - name: SPRING_DATASOURCE_PASSWORD
            valueFrom:
              secretKeyRef:
                key: spring.datasource.password
                name: s2i-sec
          - name: SPRING_DATASOURCE_USERNAME
            valueFrom:
              secretKeyRef:
                key: spring.datasource.username
                name: s2i-sec
          image: image-registry.openshift-image-registry.svc:5000/s2i-app-with-build/spring-boot-s2i-app-git@sha256:063477d5c563e30d44f1d3883c804a72231e1020a1833c5e09bcc4c96e7b6c0e
          imagePullPolicy: Always
          name: spring-boot-s2i-app-git
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - spring-boot-s2i-app-git
        from:
          kind: ImageStreamTag
          name: spring-boot-s2i-app-git:latest
          namespace: s2i-app-with-build
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/s2i-app-with-build/spring-boot-s2i-app-git@sha256:063477d5c563e30d44f1d3883c804a72231e1020a1833c5e09bcc4c96e7b6c0e
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-05T05:39:56Z"
      lastUpdateTime: "2020-05-05T05:39:56Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-05T05:42:47Z"
      lastUpdateTime: "2020-05-05T05:42:49Z"
      message: replication controller "spring-boot-s2i-app-git-3" successfully rolled
        out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 3
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
