openshift/templates/how-to-create-template/raw/route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2020-05-05T05:38:27Z"
    labels:
      app: spring-boot-s2i-app-git
      app.kubernetes.io/component: spring-boot-s2i-app-git
      app.kubernetes.io/instance: spring-boot-s2i-app-git
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-boot-s-2-i-app-git-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "8"
    name: spring-boot-s2i-app-git
    namespace: s2i-app-with-build
    resourceVersion: "2308006"
    selfLink: /apis/route.openshift.io/v1/namespaces/s2i-app-with-build/routes/spring-boot-s2i-app-git
    uid: bf3250ee-9047-4bfc-8bb2-6a198e412e65
  spec:
    host: spring-boot-s2i-app-git-s2i-app-with-build.apps.cluster-nyc-49fc.nyc-49fc.example.opentlc.com
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: spring-boot-s2i-app-git
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-05-05T05:38:27Z"
        status: "True"
        type: Admitted
      host: spring-boot-s2i-app-git-s2i-app-with-build.apps.cluster-nyc-49fc.nyc-49fc.example.opentlc.com
      routerCanonicalHostname: apps.cluster-nyc-49fc.nyc-49fc.example.opentlc.com
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
