openshift/templates/how-to-create-template/raw/svc.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      template.openshift.io/expose-uri: mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}
    creationTimestamp: "2020-05-05T04:35:06Z"
    labels:
      template: mysql-ephemeral-template
      template.openshift.io/template-instance-owner: 79a9cd7e-8ed7-49a7-ac8a-78c5ad06b900
    name: mysql
    namespace: s2i-app-with-build
    resourceVersion: "2291152"
    selfLink: /api/v1/namespaces/s2i-app-with-build/services/mysql
    uid: 004d4670-ff57-400b-8e84-5ce5314590e5
  spec:
    clusterIP: 172.30.243.170
    ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
    selector:
      name: mysql
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: master
      app.openshift.io/vcs-uri: https://github.com/IndraniDey1/spring-boot-s2i-app.git
    creationTimestamp: "2020-05-05T05:38:27Z"
    labels:
      app: spring-boot-s2i-app-git
      app.kubernetes.io/component: spring-boot-s2i-app-git
      app.kubernetes.io/instance: spring-boot-s2i-app-git
      app.kubernetes.io/name: java
      app.kubernetes.io/part-of: spring-boot-s-2-i-app-git-app
      app.openshift.io/runtime: java
      app.openshift.io/runtime-version: "8"
    name: spring-boot-s2i-app-git
    namespace: s2i-app-with-build
    resourceVersion: "2308000"
    selfLink: /api/v1/namespaces/s2i-app-with-build/services/spring-boot-s2i-app-git
    uid: 8c480bbe-27c0-41cf-8bfa-3707e4ce7fbd
  spec:
    clusterIP: 172.30.208.250
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    selector:
      app: spring-boot-s2i-app-git
      deploymentconfig: spring-boot-s2i-app-git
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
